fix: improve import and fix some type error